[project]
name = "alt-python-pydbc"
version = "0.1.0"
description = "pydbc monorepo — JDBC-inspired unified DB access for Python"
requires-python = ">=3.12"
dependencies = [
    "alt-python-pydbc-core",
    "alt-python-pydbc-sqlite",
    "alt-python-pydbc-pg",
    "alt-python-pydbc-mysql",
    "alt-python-pydbc-mssql",
    "alt-python-pydbc-oracle",
    "pymssql>=2.3.13",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/sqlite",
    "packages/pg",
    "packages/mysql",
    "packages/mssql",
    "packages/oracle",
]

[tool.uv.sources]
alt-python-pydbc-core = { workspace = true }
alt-python-pydbc-sqlite = { workspace = true }
alt-python-pydbc-pg = { workspace = true }
alt-python-pydbc-mysql = { workspace = true }
alt-python-pydbc-mssql = { workspace = true }
alt-python-pydbc-oracle = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "twine>=6.2.0",
]
